#69 Refactoring GameObject system